apps/homepage/homepage-service.yml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  labels:
    app: homepage
spec:
  selector:
    app: homepage
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    name: http
  type: ClusterIP
  clusterIP: None
