apps/homepage/homepage-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  ingressClassName: nginx
  rules:
  - host: homepage.mgmt.sholdee.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: homepage
              port:
                number: 3000
  tls:
  - hosts:
    - homepage.mgmt.sholdee.net
    secretName: homepage-tls-secret
